Custom_info_window.xml布局的各个控件的适配代码编写 首页高、中、低压的点击事件交互效果

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,4 +43,6 @@
     <color name="black_deep">#FF000000</color>
     <color name="button_back">#9BDFD5</color>
     <color name="layoutpressedclo">#88008ae6</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray_light">#f4f4f4</color>
 </resources>
