--- a/app/src/main/res/layout/activity_voltage.xml
+++ b/app/src/main/res/layout/activity_voltage.xml
@@ -42,7 +42,7 @@
     </RelativeLayout>
     <LinearLayout
         android:layout_marginTop="@dimen/dp_10"
-        android:background="#F0F0F0"
+        android:background="@drawable/bg_fragment_white"
         android:padding="@dimen/dp_10"
         android:id="@+id/low_voltage"
         android:layout_width="match_parent"
@@ -69,7 +69,7 @@
     <LinearLayout
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginBottom="@dimen/dp_10"
-        android:background="#F0F0F0"
+        android:background="@drawable/bg_fragment_white"
         android:padding="@dimen/dp_10"
         android:id="@+id/medium_voltage"
         android:layout_width="match_parent"
@@ -94,7 +94,7 @@
             android:src="@drawable/caid__06"/>
     </LinearLayout>
     <LinearLayout
-        android:background="#F0F0F0"
+        android:background="@drawable/bg_fragment_white"
         android:padding="@dimen/dp_10"
         android:id="@+id/high_voltage"
         android:layout_width="match_parent"
