--- a/app/src/main/res/layout/custom_info_window.xml
+++ b/app/src/main/res/layout/custom_info_window.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
+    android:layout_width="@dimen/dp_100"
+    android:layout_height="@dimen/dp_100"
     android:background="@drawable/custom_info_bubble"
     android:orientation="horizontal" >
 
@@ -9,7 +9,7 @@
         android:id="@+id/badge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="5dp" >
+        android:layout_marginRight="@dimen/dp_5" >
     </ImageView>
 
     <LinearLayout
@@ -25,7 +25,7 @@
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="#ff000000"
-            android:textSize="14dp"
+            android:textSize="@dimen/sp_14"
             android:textStyle="bold" />
 
         <TextView
@@ -35,7 +35,7 @@
             android:ellipsize="end"
             android:singleLine="true"
             android:textColor="#ff7f7f7f"
-            android:textSize="14dp" />
+            android:textSize="@dimen/sp_14" />
     </LinearLayout>
 
 </LinearLayout>
