--- a/app/src/main/res/layout/list_dialog_item.xml
+++ b/app/src/main/res/layout/list_dialog_item.xml
@@ -11,6 +11,7 @@
         android:background="@drawable/btn_list_item_bg">
 
         <ImageView
+            android:visibility="gone"
             android:layout_margin="5dp"
             android:layout_centerVertical="true"
             android:id="@+id/img"
